refactor subagent context and tool handling